# snowflake-cortex-ai-v2.0

./: .dockerignore  .env  .env.dev.template  .env.prod.template  .gitignore  AGENT_DEPLOYMENT_GUIDE.md  DIA_V2_IMPLEMENTATION_PLAN.md  MIGRATION_SUMMARY.md  QUICKSTART_UV.md  README.md  WHY_USE_SNOWSIGHT.md  docker-compose.yml  semantic_merged.yaml
.claude/: settings.local.json
config/: README_WIP.md  agent_spec.yaml  semantic.yaml  semantic_prod.yaml
guides/: 00_DOCKER_QUICKSTART.md  00_DOCKER_SETUP_COMPLETE.md  00_TESTING_GUIDE.md  00_WINDOWS_DOCKER_COMMANDS.md  01_STEP_1.2_DATA_LAYER_SETUP.md  02_STEP_2.1_CORTEX_SERVICES.md  03_STEP_2.2_INTENT_CLASSIFIER.md  04_STEP_2.3_RESPONSE_ENHANCER.md  05_STEP_3.1_API_ROUTES.md  06_STEP_3.2_CONVERSATION_MANAGEMENT.md  07_STEP_4.1_WEB_APP.md  08_STEP_4.2_INTEGRATIONS.md  09_STEP_5.1_EVALUATION.md  10_STEP_6.1_DEPLOYMENT.md  11_CI_CD_SETUP.md  12_SEMANTIC_MODEL_GUIDE.md  DIA_V2_IMPLEMENTATION_PLAN.md  README.md  SEMANTIC_CI_CD_QUICKSTART.md  SEMANTIC_MODEL_GUIDE.md  UV_MIGRATION_GUIDE.md
instructor-setup/: AGENT_SETUP.md  SEMANTIC_DEPLOY.md
lab-materials/: SETUP_TOOLS.ipynb
notebooks/: cortex_analyst_interactive.ipynb  cortex_complete_interactive.ipynb  cortex_ml_interactive.ipynb  cortex_search_interactive.ipynb
orchestrator/: Dockerfile  README_TEST_FILES.md  main.py  pyproject.toml  requirements.txt  test_connection.py
orchestrator/semantic_models/: README.md  __init__.py  instructions.yaml  schema.yaml  semantic_merged.yaml  verified_queries.yaml
orchestrator/semantic_models/schema/: _metadata.yaml  benchmark_thresholds.yaml  cortex_sfmc_benchmark_thresholds.yaml  dim_country.yaml  dim_job_metadata.yaml  dim_sfmc_alias.yaml  fact_performance_block.yaml  fact_performance_tracking.yaml  v_dim_country.yaml  v_dim_job_metadata.yaml  v_dim_sfmc_alias.yaml  v_fact_performance_block.yaml  v_fact_performance_tracking.yaml
orchestrator/services/: CORTEX_ANALYST_LEARNING_GUIDE.md  cortex_analyst.py  cortex_complete.py  cortex_ml.py  cortex_search.py
orchestrator/utils/: logging.py
scripts/: create_agent.sql  deploy_agent.py  deploy_semantic_model.py  inspect_agent.py  manage_semantic_model.py  merge_semantic_models.py  migrate_semantic_objects.py  setup_benchmarks.sql  setup_data_layer.py  split_semantic_model.py
web-app/: Dockerfile  app.py  pyproject.toml  requirements.txt
(+19 files in other folders)
