[project]
name = "dia-orchestrator"
version = "2.0.0"
description = "DIA Cortex AI Orchestrator - FastAPI backend for Snowflake Cortex AI"
requires-python = ">=3.11"
authors = [
    { name = "Li Ma", email = "li.ma@wpp.com" }
]
readme = "README.md"

dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "snowflake-snowpark-python==1.11.1",
    "snowflake-connector-python==3.6.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "httpx==0.26.0",
    "structlog==24.1.0",
    "python-json-logger==2.0.7",
    "pyyaml>=6.0.1",
    "ruamel.yaml>=0.18.5",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
source = ["orchestrator"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
